# SQL-query-optimizer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CmakeLists.txt  Driver  Driver.cpp  Makefile  Part1  Project_JJ_Part1  README.md  cmake_install.cmake  harness  harness.cpp  hash1.cpp  hashTable.cpp  histogram.cpp  intmd_r.cpp  join.cpp  list.cpp  nums.txt  parse_relation.cpp  partition.cpp  partitioner.cpp  queryParser.cpp  query_exec.cpp  run.sh  runRelease.sh  runTestharness.sh  runtests.sh  test.cpp  test.py  test2  test2.cpp  test3
.github/workflows/: cmake.yml
include/: config.h  dataForm.h  hashTable.h  histogram.h  interface.h  intmd_r.h  job.h  job_scheduler.h  list.h  map_info.h  node.h  partition.h  partitioner.h  queryParser.h  query_exec.h  query_results.h  simple_ht.h  simple_queue.h  simple_vector.h
partitioning/: partition.cpp  partitioner.cpp
tests/: join_old.cpp  partitioner_old.cpp  test.cpp  test2.cpp  test3.cpp
